add paragraph content

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
        
         <section class="wrapper">
             <div class="div-1">
-                Div 1
+                <p>A dessert is typically the sweet course that, after the entrée and main course, concludes a meal in the culture of many countries, particularly Western culture. The course usually consists of sweet foods, but may include other items. The word "dessert" originated from the French word desservir "to clear the table" and the negative of the Latin word servire.</p>
             </div>
             <div class="div-2">
-                Div 2
+                <p>Fruit is also commonly found in dessert courses because of its natural sweetness. Many different cultures have their own variations of similar desserts around the world, such as in Russia, where many breakfast foods such as blini, oladyi, and syrniki can be served with honey and jam to make them popular as desserts.</p>
             </div>
             <div class="div-3">
-                Div 3
+                <p>Confectionery is related to the food items that are rich in sugar and often referred to as a confection. Candy is a confection made from a concentrated solution of sugar in water, to which flavorings and colorants may be added. Candies come in numerous colors and varieties and have a long history in popular culture.</p>
             </div>
         </section>    
 
