update css using flexbox

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Make me into a grid!</title>
+        <title>About Me</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -15,22 +15,28 @@
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
         <link href='http://fonts.googleapis.com/css?family=Lora:700' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@1,700&display=swap" rel="stylesheet" type="text/css">
     </head>
     <body>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
        
-        <section class="wrapper">
-            <div class="div-1">
-                <p>A dessert is typically the sweet course that, after the entrée and main course, concludes a meal in the culture of many countries, particularly Western culture. The course usually consists of sweet foods, but may include other items. The word "dessert" originated from the French word desservir "to clear the table" and the negative of the Latin word servire.</p>
+        <section class="flex-container">
+            <header>Hi, I'm Charity</header>
+            <main>Light, fluffy, and covered in frosting: whether it's a classic vanilla cake or something for chocolate lovers, a deliciously moist cake is a staple centerpiece for any special occasion. Many of our best cake recipes start with the same method: beating butter or shortening with sugar until it's fluffy. These cakes are sometimes called creamed cakes, because the fat and sugar are creamed together.</main>
+            <div id="div-1" class="flex-items">
+                A dessert is typically the sweet course that, after the entrée and main course, concludes a meal in the culture of many countries, particularly Western culture. The course usually consists of sweet foods, but may include other items. The word "dessert" originated from the French word desservir "to clear the table" and the negative of the Latin word servire.
             </div>
-            <div class="div-2">
-                <p>Fruit is also commonly found in dessert courses because of its natural sweetness. Many different cultures have their own variations of similar desserts around the world, such as in Russia, where many breakfast foods such as blini, oladyi, and syrniki can be served with honey and jam to make them popular as desserts.</p>
+            <div id="div-2" class="flex-items">
+                Fruit is also commonly found in dessert courses because of its natural sweetness. Many different cultures have their own variations of similar desserts around the world, such as in Russia, where many breakfast foods such as blini, oladyi, and syrniki can be served with honey and jam to make them popular as desserts.
             </div>
-            <div class="div-3">
-                <p>Confectionery is related to the food items that are rich in sugar and often referred to as a confection. Candy is a confection made from a concentrated solution of sugar in water, to which flavorings and colorants may be added. Candies come in numerous colors and varieties and have a long history in popular culture.</p>
+            <div id="div-3" class="flex-items">
+                Confectionery is related to the food items that are rich in sugar and often referred to as a confection. Candy is a confection made from a concentrated solution of sugar in water, to which flavorings and colorants may be added. Candies come in numerous colors and varieties and have a long history in popular culture.
             </div>
+            <footer>Footer</footer>
         </section>    
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
